  * `hints.radius` to set a border radius for hints (set to `3` by default).
- New placeholders for `url.searchengines` values:
  * `{unquoted}` inserts the search term without any quoting
  * `{semiquoted}` (same as `{}`) quotes most special characters, but slashes
    remain unquoted.
  * `{quoted}` (same as `{}` in earlier releases) also quotes slashes.

Changed
~~~~~~~

- Searching now wraps around the page by default with QtWebKit (where it didn't
  before). Set `search.wrap` to `false` to restore the old behavior.
- The `{}` placeholder for search engines (the `url.searchengines` setting) now
  does not quote slashes anymore, but other characters typically encoded in
  URLs still get encoded. This matches the behavior of search engines in
  Chromium. To revert to the old behavior, use `{quoted}` instead.
- The `content.windowed_fullscreen` setting got renamed to
  `content.fullscreen.window`.
- Changes to userscripts:
  * `qute-bitwarden` now has an optional `--totp` flag which can be used
    to copy TOTP codes to clipboard (requires the `pyperclip` module).
  * `readability-js` now opens readability tabs next to the original
    tab (using the `:open --related` flag).
  * `readability-js` now displays a favicon for readability tabs.
  * `password_fill` now triggers a `change` JavaScript event after filling the
    data.
- The `dictcli.py` script now shows better error messages.
- Various improvements to the `mkvenv.py` script (mainly useful for development).
- First adoptions to Qt 5.15.
- Minor performance improvements.

Deprecated
~~~~~~~~~~

- A warning about old Qt versions is now also shown with Qt 5.9 and 5.10, as
  support for Qt < 5.11 will be dropped in qutebrowser v2.0.

Fixed
~~~~~

- `unsafeWindow` is now defined for Greasemonkey scripts with QtWebKit.
- The proxied `window` global is now shared between different
  Greasemonkey scripts (but still separate from the page's `window`), to
  match the original Greasemonkey implementation.